
October 4, 2010
---------------
#905860 by Michelle: Ensure advanced_forum_get_forum_types returns an array()
#876294 by RedKing: Updated French translation.
NOISSUE by Michelle: Made submit button IDs more specific on searching. Tangently related to #883452.
#883452 by rodrigoaguilera: Added a specific ID to the topic list sort form.

September 23, 2010
------------------
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for core comments.
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for node comments.
#913822 by Michelle, meustrus: Changed sorting so updates only bump on the New & My views.
NOISSUE by Michelle: Many tweaks to the included views.
NOISSUE by Michelle: Added setting to turn on local tabs for the stand alone included views.

September 22, 2010
------------------
#829456 by Michelle, meustrus: Added Permalink integration.
NOISSUE by Michelle: Cleaned up node and comment preprocessing including starting #1 at the node, fixing bad logic in the class collection, re-arranging in display order, and more.
#525194 by Michelle: Removed Author Pane dependency.
#751890 by Michelle: Missed removing advanced_forum.naked.topic-list.tpl.php when Views was made a dependency.
#725720 by ltwinner: Added variable for reply link to node preprocess.

September 21, 2010
------------------
#868550 by enzipher, szantog: Added missing brackets in query.
#872294 by merlinofchaos, jeckman: Fixed query part of link for forum views so they can take multiple forum arguments.
#857982 by aenw: Checked if $added is empty rather than !$added.
#908938 by Michelle: Changed how check for node's being displayed as a teaser works.

August 26, 2010 
-------------
#850508 by Michelle: Updated Author Pane template.
NOISSUE by Michelle: Author Pane tokenizing should not happen on topic starting node.

July 11, 2010 
-------------
#768348 by Michelle: Fixed node comment incompatability with new link alter.
