@@ -1,5 +1,5 @@
 <?php
-// $Id $
+// $Id$
 /**
  * @file
  * Display the search forum widget.
@@ -20,6 +20,6 @@
   <div class="form-item" id="edit-keys-wrapper">
     <input type="text" maxlength="128" name="keys" id="edit-keys" value="" title="<?php print t('Enter the terms you wish to search for.'); ?>" class="form-text" />
   </div>
-  <input type="submit" id="edit-submit-forum-search" value="<?php print t('Search'); ?>"  class="form-submit" />
+  <input type="submit" id="edit-submit-forum-search" value="<?php print t('Search forum'); ?>"  class="form-submit" />
 </div>
 </form>
